# jarvis-local

./: .gitignore  AGENTS.md  CLAUDE.md  PROJECT.md  README.md  README.ru.md  VISION.md  audio_in.py  audio_utils.py  backend.py  capture.py  clipboard_input.py  config.example.toml  config.py  day0_checks.py  hotkey_provider.py  main.py  manual_check_audio_in.py  manual_check_backend.py  manual_check_capture.py  manual_check_piper.py  manual_check_speech_markup.py  manual_check_speech_markup_contract.py  manual_check_status_console.py  manual_check_thinking_mode.py  manual_check_tts.py  manual_check_tts_engines.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup_tts_model.py  sound_cues.py  speech_markup.py  status_console.py  system_log.py  thinking_mode.py  tts.py  ui_contract.py  ui_text.py  ui_transport.py  (+1 more)
.claude/: launch.json
audio/: sample.m4a
local_jarvis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
manual/: __init__.py  camera-usb-release-handoff.md  day0_checks.py  manual_check_audio_in.py  manual_check_backend.py  manual_check_bilingual_tts_production.py  manual_check_bilingual_tts_routes.py  manual_check_camera_spike.py  manual_check_capture.py  manual_check_graded_reasoning.py  manual_check_hotkey_provider.py  manual_check_mcp_providers.py  manual_check_microphone_devices.py  manual_check_piper.py  manual_check_rtsp_discovery.py  manual_check_speech_markup.py  manual_check_speech_markup_contract.py  manual_check_status_console.py  manual_check_thinking_mode.py  manual_check_tool_calling.py  manual_check_tts.py  manual_check_tts_engines.py
status_console_ui/: app.js  demo.html  demo.js  index.html  style.css  touchstrip.css  touchstrip.html  touchstrip.js  transport.js
tasks/: attachment-policy-v1.6.0.md  backlog-history-window.md  camera-spike-handoff.md  control-center-v1.3.0-ia.md  roadmap-v1.2-v1.3.md  roadmap-v1.2-v1.4.md  roadmap-v1.5.1-v1.7.md  spike-results-TTS-engines-1.0.md  (+185 more)
(+358 files in other folders)
