[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "local-jarvis"
version = "1.2.12"
requires-python = ">=3.11,<3.12"

[tool.setuptools]
packages = ["jarvis"]
package-dir = {jarvis = "src/jarvis"}
py-modules = [
    "main",
    "status_console",
    "ui_contract",
    "ui_text",
    "ui_transport",
    "visibility_mode",
]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["graphify-out"]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",
]
"manual/**/*.py" = [
    # Manual scripts currently add the repository root to sys.path. The
    # package-layout story removes that workaround before lint becomes a gate.
    "E402",
]
