[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "local-jarvis"
version = "1.5.0"
requires-python = ">=3.11,<3.12"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"jarvis.ui" = ["status_console_ui/*.html", "status_console_ui/*.css", "status_console_ui/*.js"]

[tool.ruff]
target-version = "py311"
line-length = 88
extend-exclude = ["graphify-out", ".venv-mcp-*"]

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "C90",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
    "W",
]
ignore = [
    # Jarvis intentionally contains Russian runtime, dialog, and test strings.
    # RUF001 reports high-volume false positives on legitimate Cyrillic data.
    "RUF001",
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "B011",
]
